[build-system]
requires = [
    "setuptools>=42",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = true
force_single_line = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    # joblib/loky emits this on Windows CI (Python 3.8) when it cannot
    # query physical core count via the registry — harmless, not our code.
    "ignore:Could not find the number of physical cores:UserWarning",
]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/pynear/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
